# ask-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/commands/: release-check.md
docs/: RELEASE-CHECKLIST.md  STATUS.md  ask-cli-prd-merged.md
docs/legacy/: ask-v1.py
docs/one-off/: migrate-api-keys-to-env.md  restore-api-keys-for-wsl-dual-entry.md
src/ask_cli/: __init__.py  cli.py  config.py  exceptions.py  output.py
src/ask_cli/core/: __init__.py  agent.py  commands.py  conversation.py  files.py  history.py  saved.py  stats.py  templates.py
src/ask_cli/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py  zai.py
tests/: conftest.py  test_cli.py  test_config.py  test_output.py
tests/core/: test_agent.py  test_commands.py  test_conversation.py  test_files.py  test_history.py  test_saved.py  test_stats.py  test_templates.py
tests/providers/: test_base.py  test_openai.py  test_zai.py
