[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask-cli"
dynamic = ["version"]
description = "Terminal AI assistant"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "anthropic>=0.79,<1",
    "rich>=13.7,<16",
    "pyyaml>=6.0,<7",
    "openai>=1.0,<3",
    "google-genai>=1.0,<2",
    "pyperclip>=1.9,<2",
]

[project.scripts]
ask = "ask_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.4.0"]

[tool.hatch.version]
path = "src/ask_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ask_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/ask_cli --cov-report=term-missing"
